# Extract-Excel-XML-Data

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build-and-run-unit-tests.ps1  clippings.cpp  larger-font-sizes.css  launch.vs.json  main.cpp  main.hpp  open-doxygen-html-docs.ps1  workspace-hash.txt
Extract-Excel-XML-Data/: CMakeLists.txt  config.h.in  main.cpp  pch-main.cpp
IO/: CMakeLists.txt
IO-Extra/: CMakeLists.txt
IO-Extra/public/IO-Extra/: ostream_ww_iterator.hpp  pair.hpp  sequence.hpp
IO/public/IO/: ostream_ww_iterator.hpp  pair.hpp
Operations/: CMakeLists.txt  pch-operations.cpp  pch-operations.hpp
Operations/public/Operations/: Calculator.hpp  No-Op.hpp  Program-Base.hpp  Program.hpp  string-functions.hpp
Operations/src/: Calculator.cpp  Program-Base.cpp  Program.cpp
Pseudo-XPath/: CMakeLists.txt
Pseudo-XPath-Parser/: CMakeLists.txt  pch-xpath-parser.cpp  pch-xpath-parser.hpp
Pseudo-XPath-Parser/public/Pseudo-XPath-Parser/: Grade-Creator.hpp  Grade.hpp  mini-grammar.hpp
Pseudo-XPath-Parser/src/: Grade-Creator.cpp  Grade.cpp
Pseudo-XPath/public/Pseudo-XPath/: Grade-Creator.hpp  Grade.hpp  forming.hpp  mini-grammar.hpp  parsing.hpp
Pseudo-XPath/src/: Grade-Creator.cpp  Grade.cpp  parsing.cpp
Simple-XML/: CMakeLists.txt  config.h.in  pch-simple-xml.cpp  pch-simple-xml.hpp
Simple-XML-Parser/: CMakeLists.txt  pch-xml-parser.hpp
Simple-XML-Parser/public/Excel-XML-Parser/: Node-Creator.hpp  Node-Visitor.hpp  mini-grammar.hpp
Simple-XML-Parser/public/Simple-XML-Parser/: Node-Filter.hpp  Node.hpp  Row-Column-Titles.hpp  Worksheet-Row-Column-Titles.hpp
Simple-XML-Parser/src/: Node-Creator.cpp  Node-Filter.cpp  Node-Visitor.cpp  Worksheet-Row-Column-Titles.cpp
Simple-XML/public/Simple-XML/: Document.hpp  Element-Creator.hpp  Element-Filter.hpp  Element-Visitor.hpp  Element.hpp  Row-Column-Titles.hpp  Worksheet-Row-Column-Titles.hpp  mini-grammar.hpp
Simple-XML/public/Simple-XML/off/: Document.hpp  Element-Filter.hpp  Element-Visitor.hpp  Worksheet-Row-Column-Titles.hpp
Simple-XML/src/: Document.cpp  Element-Creator.cpp  Element-Creator.hpp  Element-Filter.cpp  Element-Visitor.cpp  Element.cpp  Worksheet-Row-Column-Titles.cpp  mini-grammar.hpp
Simple-XML/src/off/: Document.cpp  Element-Creator.cpp  Element-Creator.hpp  Element-Filter.cpp  Element-Visitor.cpp  Worksheet-Row-Column-Titles.cpp  mini-grammar.hpp
String-Extra/: CMakeLists.txt
String-Extra/public/String-Extra/: convert-and-translate.hpp  forming.hpp  predicates.hpp
Strings-Extra/: CMakeLists.txt
Strings-Extra/public/Strings-Extra/: convert-and-translate.hpp  forming.hpp  predicates.hpp
Unit-Practices/: CMakeLists.txt  GlobalFixture.cpp  main-practice.cpp  pch-practice.cpp  pch-practice.hpp
Unit-Practices/io/: sequence.hpp
Unit-Practices/practice/: boost-string.cpp  calculator.cpp  cell-refs.cpp  confix.cpp  filter-path.cpp  fusion.cpp  grammars.cpp  initializer-list.cpp  io-pair.cpp  parsers.cpp  program.cpp  regex.cpp  semantic-actions.cpp  std-parse.cpp  string-functions.cpp  synthesized-attributes.cpp  tokenizer.cpp  wrc-titles.cpp  xpath-mini-grammar.cpp
Unit-Practices/practice/testing-factor/: mini-xml-printer.hpp  mini-xml-tag.hpp  mini-xml.hpp  opening-tag.hpp  tag-attributes.hpp
Unit-Tests/: CMakeLists.txt  GlobalFixture.cpp  GlobalFixture.hpp  main-unit-tests.cpp  pch-unit-tests.cpp  pch-unit-tests.hpp  put-to-operators.hpp  test-calculator.cpp  test-document.cpp  test-element-creator.cpp  test-element-filter.cpp  test-element-visitor.cpp  test-element.cpp  test-io-pair.cpp  test-program.cpp  test-row-column-titles.cpp  test-string-functions.cpp  test-synthesized-attributes.cpp  test-worksheet-row-column-titles.cpp  test-wrc-titles.cpp  test-xml-document.cpp  test-xml-mini-grammar.cpp  test-xpath-mini-grammar.cpp
Unit-Tests/CMakeModules/: BoostAddTests.cmake  Discover.Boost.Test.cmake  parse-dot-output.c
Unit-Tests/test/: calculator.cpp  filter-path.cpp  fusion.cpp  grammars.cpp  io-pair.cpp  parsers.cpp  program.cpp  regex.cpp  semantic-actions.cpp  string-functions.cpp  synthesized-attributes.cpp  tokenizer.cpp  wrc-titles.cpp  xpath-mini-grammar.cpp
Unit-Tests/test/testing-factor/: mini-xml-printer.hpp  mini-xml-tag.hpp
boost/: CMakeLists.txt
main/: CMakeLists.txt
sample-xml/: Financial-ratios-calc-script.txt  SHV Price History Daily Adj.xls  SHV-company-report.xlsx  SHV.xls.bak  SHV.xml  graph.py  graph.txt  price-history.xml  single-column-of-values-worksheet.xml  single-value-worksheet.xml  small-example.xml  small.xml  some-financial-ratios.txt  toy-4.xml
scripts/: boost-1-70-0-ljd-build-MSVC-2019.ps1  build-and-run-unit-tests.ps1  clean.ps1  install.ps1  open-doxygen-html-docs.ps1
